opam-version: "2.0"
maintainer: "Zach Shipko <zachshipko@gmail.com>"
authors: ["Zach Shipko <zachshipko@gmail.com>"]
homepage: "https://github.com/zshipko/resp"
doc: "https://zshipko.github.io/resp/doc"
license: "ISC"
dev-repo: "https://github.com/zshipko/resp.git"
bug-reports: "https://github.com/zshipko/resp/issues"
tags: []

depends:
[
    "ocaml" {>= "4.03.0"}
    "dune" {build}
    "resp"
]

depopts: []

build:
[
    ["dune" "build" "-p" name]
    ["dune" "runtest" "-p" name] {with-test}
]
