opam-version: "2.0"
synopsis: "Redis serialization protocol tools for MirageOS"
maintainer: "Zach Shipko <zachshipko@gmail.com>"
authors: "Zach Shipko <zachshipko@gmail.com>"
license: "ISC"
homepage: "https://github.com/zshipko/resp"
doc: "https://zshipko.github.io/resp/doc"
bug-reports: "https://github.com/zshipko/resp/issues"
depends: [
  "ocaml" {>= "4.05.0"}
  "dune" {build}
  "resp" {>= "0.9.1"}
  "resp-client" {>= "0.9.1"}
  "resp-server" {>= "0.9.1"}
  "lwt" {>= "5.4.0"}
  "conduit-mirage" {>= "2.2.1"}
]
build: ["dune" "build" "-p" name]
dev-repo: "git+https://github.com/zshipko/resp.git"
