opam-version: "2.0"
synopsis: "Redis serialization protocol tools for MirageOS"
maintainer: "Zach Shipko <zachshipko@gmail.com>"
authors: "Zach Shipko <zachshipko@gmail.com>"
license: "ISC"
homepage: "https://github.com/zshipko/resp"
doc: "https://zshipko.github.io/resp"
bug-reports: "https://github.com/zshipko/resp/issues"
depends: [
  "ocaml" {>= "4.05.0"}
  "dune" {build}
  "resp" {>= version}
  "resp-client" {>= version}
  "resp-server" {>= version}
  "lwt"
  "conduit-mirage" {>= "2.0.0"}
]
build: ["dune" "build" "-p" name]
dev-repo: "git+https://github.com/zshipko/resp.git"
