opam-version: "2.0"
synopsis: "Redis serialization protocol library for Unix"
maintainer: "Zach Shipko <zachshipko@gmail.com>"
authors: "Zach Shipko <zachshipko@gmail.com>"
license: "ISC"
homepage: "https://github.com/zshipko/resp"
doc: "https://zshipko.github.io/resp"
bug-reports: "https://github.com/zshipko/resp/issues"
depends: [
  "ocaml" {>= "4.07.0"}
  "dune" {build}
  "resp" {>= version}
  "resp-client" {>= version}
  "resp-server" {>= version}
  "conduit-lwt-unix" {>= "1.3.0" & < "3.0.0"}
  "alcotest" {with-test}
  "lwt"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
dev-repo: "git+https://github.com/zshipko/resp.git"
