opam-version: "2.0"
maintainer: "Zach Shipko <zachshipko@gmail.com>"
authors: "Zach Shipko <zachshipko@gmail.com>"
license: "ISC"
homepage: "https://github.com/zshipko/resp"
doc: "https://zshipko.github.io/resp"
bug-reports: "https://github.com/zshipko/resp/issues"
depends: [
  "ocaml" {>= "4.07.0"}
  "dune" {>= "2.0.0"}
  "resp" {= version}
  "resp-client" {= version}
  "resp-server" {= version}
  "conduit-lwt-unix" {>= "5.0.0"}
  "alcotest" {with-test}
  "lwt"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
dev-repo: "git+https://github.com/zshipko/resp.git"

synopsis: """
Redis serialization protocol for Unix
"""

description: """
Redis protocol for Unix

Defines a Unix-compaible client and server using Lwt
"""
